--- a/res/layout/reg_update_activity.xml
+++ b/res/layout/reg_update_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:id="@+id/main"
               android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -17,6 +18,7 @@
                       android:layout_height="match_parent">
             <ImageView android:layout_width="98dp"
                        android:layout_marginTop="15dp"
+                       android:id="@+id/cover"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_profile_headpic"
                        android:layout_height="98dp"/>
@@ -46,6 +48,7 @@
                               android:layout_height="wrap_content"/>
                     <EditText android:layout_width="wrap_content"
                               android:hint="未填写"
+                              android:id="@+id/sign"
                               android:gravity="top"
                               android:paddingTop="8dp"
                               android:paddingLeft="8dp"
@@ -72,6 +75,7 @@
                     <EditText android:layout_width="wrap_content"
                               android:hint="未填写"
                               android:gravity="top"
+                              android:id="@+id/nickname"
                               android:paddingTop="8dp"
                               android:paddingLeft="8dp"
                               android:textSize="15sp"
@@ -98,6 +102,7 @@
                               android:layout_weight="1"
                               android:drawablePadding="8dp"
                               android:textSize="15sp"
+                              android:id="@+id/age"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
                               android:textColor="@color/text_color"
@@ -119,6 +124,7 @@
                               android:text="范围：150-190cm"
                               android:layout_weight="1"
                               android:textSize="15sp"
+                              android:id="@+id/heightl"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
@@ -141,6 +147,7 @@
                               android:text="高中以下,中专,专科,本科,研究生以上"
                               android:layout_weight="1"
                               android:textSize="15sp"
+                              android:id="@+id/education"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
@@ -163,6 +170,7 @@
                               android:text="山东省滨州市"
                               android:layout_weight="1"
                               android:textSize="15sp"
+                              android:id="@+id/address"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
@@ -185,6 +193,7 @@
                               android:text="未婚,离异,丧偶"
                               android:layout_weight="1"
                               android:textSize="15sp"
+                              android:id="@+id/marragie"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
@@ -209,6 +218,7 @@
                               android:paddingTop="8dp"
                               android:paddingLeft="8dp"
                               android:textSize="15sp"
+                              android:id="@+id/company"
                               android:textColor="@color/text_color"
                               android:textColorHint="@color/textColortwo"
                               android:layout_weight="1"
@@ -231,6 +241,7 @@
                     <TextView android:layout_width="wrap_content"
                               android:text="读书,音乐,电影"
                               android:layout_weight="1"
+                              android:id="@+id/likes"
                               android:textSize="15sp"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
@@ -265,6 +276,7 @@
                               android:text="范围：1970-1999年"
                               android:layout_weight="1"
                               android:textSize="15sp"
+                              android:id="@+id/age_marry"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
@@ -286,6 +298,7 @@
                     <TextView android:layout_width="wrap_content"
                               android:text="范围：150-190cm"
                               android:layout_weight="1"
+                              android:id="@+id/heightl_marry"
                               android:textSize="15sp"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
@@ -309,6 +322,7 @@
                               android:text="高中以下,中专,专科,本科,研究生以上"
                               android:layout_weight="1"
                               android:textSize="15sp"
+                              android:id="@+id/education_marry"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
@@ -331,6 +345,7 @@
                               android:text="未婚,离异,丧偶"
                               android:layout_weight="1"
                               android:textSize="15sp"
+                              android:id="@+id/marry_marry"
                               android:drawablePadding="8dp"
                               android:gravity="right|center_vertical"
                               android:drawableRight="@drawable/icon_small_list_more"
@@ -340,7 +355,6 @@
             </LinearLayout>
             <Button android:layout_width="match_parent"
                     android:padding="8dp"
-                    android:layout_below="@+id/sex_liner"
                     android:layout_marginTop="45dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="15dp"
