注册完善资料

--- a/res/layout/reg_update_activity.xml
+++ b/res/layout/reg_update_activity.xml
@@ -24,6 +24,7 @@
                        android:layout_height="98dp"/>
             <TextView android:layout_width="wrap_content"
                       android:text="上传照片"
+                      android:id="@+id/txt_pic"
                       android:layout_marginTop="8dp"
                       android:layout_gravity="center_horizontal"
                       android:textSize="16sp"
@@ -84,6 +85,28 @@
                               android:layout_weight="1"
                               android:background="@drawable/icon_input_bg"
                               android:layout_height="35dp"/>
+                </LinearLayout>
+                <LinearLayout android:layout_width="match_parent"
+                              android:orientation="horizontal"
+                              android:layout_marginLeft="6dp"
+                              android:layout_marginTop="15dp"
+                              android:gravity="center_vertical"
+                              android:layout_marginRight="6dp"
+                              android:layout_height="wrap_content">
+                    <TextView android:layout_width="70dp"
+                              android:text="手机号码"
+                              android:textSize="15sp"
+                              android:textColor="@color/text_color"
+                              android:layout_height="wrap_content"/>
+                    <TextView android:layout_width="wrap_content"
+                              android:layout_weight="1"
+                              android:drawablePadding="8dp"
+                              android:layout_marginRight="15dp"
+                              android:textSize="15sp"
+                              android:id="@+id/mobile"
+                              android:gravity="right|center_vertical"
+                              android:textColor="@color/text_color"
+                              android:layout_height="wrap_content"/>
                 </LinearLayout>
                 <LinearLayout android:layout_width="match_parent"
                               android:orientation="horizontal"
