--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -27,6 +27,7 @@
                           android:layout_marginRight="15dp"
                           android:padding="10dp"
                           android:numeric="integer"
+                          android:singleLine="true"
                           android:drawablePadding="15dp"
                           android:background="@drawable/icon_input_bg"
                           android:drawableLeft="@drawable/icon_input_phone"
@@ -42,6 +43,7 @@
                           android:layout_marginRight="15dp"
                           android:padding="10dp"
                           android:password="true"
+                          android:singleLine="true"
                           android:drawablePadding="15dp"
                           android:background="@drawable/icon_input_bg"
                           android:drawableLeft="@drawable/icon_input_passwd"
