--- a/res/layout/about_company_activity.xml
+++ b/res/layout/about_company_activity.xml
@@ -24,20 +24,20 @@
                           android:background="@color/white"
                           android:padding="25dp"
                           android:textSize="16sp"
+                          android:id="@+id/content"
                           android:layout_gravity="center"
                           android:gravity="center|left"
                           android:textColor="@color/textColor"
                           android:lineSpacingMultiplier="1.4"
-                          android:text="致力于做婚恋领域的领导者和创新者，真实婚恋的开创者和践行者"
                           android:layout_height="wrap_content"/>
                 <TextView android:layout_width="match_parent"
                           android:background="@color/white"
                           android:gravity="right"
                           android:padding="8dp"
+                          android:id="@+id/title1"
                           android:textSize="16sp"
                           android:textColor="@color/textColor"
                           android:lineSpacingMultiplier="1.4"
-                          android:text="---幸福牵手吧          "
                           android:layout_height="wrap_content"/>
 
                 <TextView android:layout_width="wrap_content"
@@ -52,8 +52,8 @@
                           android:layout_marginLeft="25dp"
                           android:layout_marginTop="10dp"
                           android:textSize="16sp"
+                          android:id="@+id/cont1"
                           android:layout_marginRight="25dp"
-                          android:text="脱单如此容易，幸福触手可及"
                           android:layout_height="wrap_content"/>
                 <TextView android:layout_width="wrap_content"
                           android:text="愿景"
@@ -68,7 +68,7 @@
                           android:layout_marginTop="10dp"
                           android:textSize="16sp"
                           android:layout_marginRight="25dp"
-                          android:text="做用户生活中最亲密的朋友，让用户生活更幸福"
+                          android:id="@+id/cont2"
                           android:layout_height="wrap_content"/>
                 <TextView android:layout_width="wrap_content"
                           android:text="价值观"
@@ -82,8 +82,8 @@
                           android:layout_marginLeft="25dp"
                           android:layout_marginTop="10dp"
                           android:textSize="16sp"
+                          android:id="@+id/cont3"
                           android:layout_marginRight="25dp"
-                          android:text="真诚，便捷，创新，热爱"
                           android:layout_height="wrap_content"/>
             </LinearLayout>
 
