--- a/res/layout/forget_pwr_activity.xml
+++ b/res/layout/forget_pwr_activity.xml
@@ -19,7 +19,7 @@
             <EditText android:layout_width="match_parent"
                       android:textColor="@color/textColortwo"
                       android:textColorHint="@color/textColortwo"
-                      android:hint="新手机号"
+                      android:hint="手机号"
                       android:layout_marginTop="15dp"
                       android:layout_marginLeft="15dp"
                       android:layout_marginRight="15dp"
@@ -57,7 +57,7 @@
                         android:text="验证码"
                         android:textStyle="bold"
                         android:id="@+id/btn_card"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="@color/white"
                         android:background="@drawable/btn_short_active"
                         android:layout_height="wrap_content"/>
