欢迎页和会员认证服务费页面修改

--- a/res/layout/pay_emp_rz_activity.xml
+++ b/res/layout/pay_emp_rz_activity.xml
@@ -21,24 +21,79 @@
                        android:src="@drawable/bigpic_verify_honesty"
                        android:layout_height="wrap_content"/>
 
-            <TextView android:layout_width="match_parent"
-                      android:textColor="@color/textColor"
-                      android:text="会员服务费 120元/年"
-                      android:layout_marginTop="35dp"
-                      android:layout_marginLeft="15dp"
-                      android:layout_marginRight="15dp"
-                      android:padding="10dp"
-                      android:textSize="16sp"
-                      android:gravity="center"
-                      android:background="@drawable/icon_input_bg"
-                      android:drawableLeft="@drawable/icon_checkbox_checked"
-                      android:id="@+id/nickname"
-                      android:layout_height="wrap_content"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:background="@color/white"
+                          android:layout_marginTop="15dp"
+                          android:layout_gravity="center"
+                          android:gravity="center"
+                          android:layout_height="50dp">
+                <TextView android:layout_width="wrap_content"
+                          android:text="365天\n一年"
+                          android:textColor="@color/white"
+                          android:layout_gravity="center"
+                          android:gravity="center"
+                          android:textSize="13sp"
+                          android:background="@drawable/payment_verify_time_bg"
+                          android:layout_height="50dp"/>
+                <TextView android:layout_width="wrap_content"
+                          android:layout_weight="1"
+                          android:textColor="@color/textColor"
+                          android:text="会员服务费"
+                          android:layout_marginLeft="15dp"
+                          android:layout_marginRight="15dp"
+                          android:padding="10dp"
+                          android:textSize="18sp"
+                          android:gravity="center"
+                          android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content"
+                          android:textColor="@color/textColor"
+                          android:text="￥120.00"
+                          android:layout_marginLeft="15dp"
+                          android:layout_marginRight="15dp"
+                          android:padding="10dp"
+                          android:textSize="16sp"
+                          android:gravity="center"
+                          android:layout_height="wrap_content"/>
+            </LinearLayout>
 
+            <LinearLayout android:layout_width="match_parent"
+                          android:background="@color/white"
+                          android:layout_marginTop="15dp"
+                          android:orientation="vertical"
+                          android:padding="15dp"
+                          android:layout_height="wrap_content">
+                <TextView android:layout_width="wrap_content"
+                          android:text="详情"
+                          android:layout_marginLeft="8dp"
+                          android:textSize="15sp"
+                          android:textColor="@color/textColor"
+                          android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content"
+                          android:text="·感谢您申请成为认证会员;"
+                          android:textSize="13sp"
+                          android:layout_marginTop="5dp"
+                          android:layout_marginLeft="8dp"
+                          android:textColor="@color/text_color"
+                          android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content"
+                          android:text="·服务将于在线支付成功后自动开通;"
+                          android:layout_marginLeft="8dp"
+                          android:textSize="13sp"
+                          android:layout_marginTop="5dp"
+                          android:textColor="@color/text_color"
+                          android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content"
+                          android:text="·如有任何疑问，请随时与我们联系，谢谢"
+                          android:layout_marginLeft="8dp"
+                          android:layout_marginTop="5dp"
+                          android:textSize="13sp"
+                          android:textColor="@color/text_color"
+                          android:layout_height="wrap_content"/>
+            </LinearLayout>
             <Button android:layout_width="match_parent"
                     android:padding="8dp"
                     android:layout_below="@+id/pwr"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="25dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:text="微信支付"
