--- a/res/layout/item_grid_pic.xml
+++ b/res/layout/item_grid_pic.xml
@@ -10,6 +10,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="6dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/default_cover2"
             android:id="@+id/item_pic"
             />
