--- a/res/layout/item_index_tuijian_people.xml
+++ b/res/layout/item_index_tuijian_people.xml
@@ -8,33 +8,35 @@
               android:layout_height="wrap_content">
 
     <com.lbins.meetlove.widget.RoundImageView
-            android:layout_width="108dp"
-            android:layout_height="108dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="6dp"
             android:src="@drawable/default_cover1"
             android:id="@+id/cover"/>
 
         <RelativeLayout android:layout_width="wrap_content"
-                        android:padding="8dp"
+                        android:padding="5dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:layout_height="wrap_content">
             <TextView android:layout_width="wrap_content"
-                      android:text="李灵黛"
                       android:textSize="18sp"
                       android:id="@+id/nickname"
+                      android:text="李灵黛"
                       android:textColor="@color/textColor"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
-                      android:text="交往中"
                       android:layout_marginLeft="6dp"
                       android:layout_marginTop="6dp"
                       android:layout_toRightOf="@+id/nickname"
                       android:id="@+id/state"
+                      android:text="单身"
                       android:textSize="12sp"
                       android:textColor="@color/main_color"
                       android:layout_height="wrap_content"/>
             <ImageView android:layout_width="18dp"
                        android:id="@+id/vip1_img"
-                       android:layout_marginTop="6dp"
+                       android:layout_marginTop="4dp"
                        android:layout_below="@+id/nickname"
                        android:src="@drawable/icon_verify_id_enabled"
                        android:layout_height="18dp"/>
@@ -43,14 +45,14 @@
                       android:layout_marginLeft="3dp"
                       android:textSize="12sp"
                       android:textColor="@color/main_color"
-                      android:layout_marginTop="8dp"
+                      android:layout_marginTop="6dp"
                       android:id="@+id/vip1_text"
                       android:layout_toRightOf="@+id/vip1_img"
                       android:layout_below="@+id/nickname"
                       android:layout_height="wrap_content"/>
             <ImageView android:layout_width="18dp"
                        android:id="@+id/vip2_img"
-                       android:layout_marginTop="6dp"
+                       android:layout_marginTop="4dp"
                        android:layout_marginLeft="6dp"
                        android:layout_toRightOf="@+id/vip1_text"
                        android:layout_below="@+id/nickname"
@@ -60,34 +62,31 @@
                       android:text="诚信"
                       android:textSize="12sp"
                       android:layout_marginLeft="3dp"
-                      android:layout_marginTop="8dp"
+                      android:layout_marginTop="6dp"
                       android:textColor="@color/orange"
                       android:id="@+id/vip2_text"
                       android:layout_toRightOf="@+id/vip2_img"
                       android:layout_below="@+id/nickname"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
-                      android:text="86年"
                       android:layout_below="@+id/vip1_text"
                       android:id="@+id/age"
                       android:textColor="@color/textColortwo"
                       android:textSize="12sp"
-                      android:layout_marginTop="6dp"
+                      android:layout_marginTop="3dp"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
-                      android:text="163cm"
                       android:layout_marginLeft="6dp"
                       android:layout_toRightOf="@+id/age"
                       android:layout_below="@+id/vip1_text"
                       android:id="@+id/height"
-                      android:layout_marginTop="6dp"
+                      android:layout_marginTop="3dp"
                       android:textSize="12sp"
                       android:textColor="@color/textColortwo"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
-                      android:text="沈阳"
                       android:textColor="@color/textColortwo"
-                      android:layout_marginTop="6dp"
+                      android:layout_marginTop="3dp"
                       android:layout_toRightOf="@+id/height"
                       android:textSize="12sp"
                       android:layout_marginLeft="6dp"
