相册查询数量处理

--- a/res/layout/activity_album_chance.xml
+++ b/res/layout/activity_album_chance.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/back"
                 android:paddingLeft="10dp"
                 android:text="返回"
+                android:textColor="@color/white"
                 android:gravity="center_vertical"
                 android:paddingRight="10dp"
                 />
