--- a/res/layout/one_fragment.xml
+++ b/res/layout/one_fragment.xml
@@ -10,46 +10,14 @@
             android:layout_height="wrap_content"
             layout="@layout/top"/>
 
-    <!--<RelativeLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="@dimen/topbar_height"-->
-            <!--android:background="@color/black"-->
-            <!--android:gravity="center_vertical"-->
-            <!-->-->
-
-        <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textSize="18sp"-->
-                <!--android:textColor="@color/white"-->
-                <!--android:layout_centerHorizontal="true"-->
-                <!--android:layout_centerVertical="true"-->
-                <!--android:singleLine="true"-->
-                <!--android:text="推荐"-->
-                <!--android:layout_marginLeft="45dp"-->
-                <!--android:layout_marginRight="45dp"-->
-                <!--android:id="@+id/title"-->
-                <!--/>-->
-        <!--<ImageView android:layout_width="wrap_content"-->
-                   <!--android:layout_height="match_parent"-->
-                   <!--android:gravity="center_vertical"-->
-                   <!--android:src="@drawable/icon_navbar_search"-->
-                   <!--android:layout_alignParentRight="true"-->
-                   <!--android:paddingLeft="10dp"-->
-                   <!--android:paddingRight="15dp"-->
-                   <!--android:id="@+id/btn_right"-->
-                <!--/>-->
-    <!--</RelativeLayout>-->
-
             <com.lbins.meetlove.widget.ReboundScrollView android:layout_width="match_parent"
-                                                         android:layout_height="match_parent">
+                                                         android:layout_height="wrap_content">
                 <LinearLayout android:layout_width="match_parent"
                               android:orientation="vertical"
-                              android:layout_height="match_parent">
+                              android:layout_height="wrap_content">
                     <RelativeLayout android:layout_width="match_parent"
-                                    android:layout_weight="1"
                                     android:background="@color/white"
-                                    android:layout_height="0dp">
+                                    android:layout_height="wrap_content">
                         <RelativeLayout android:layout_width="match_parent"
                                         android:orientation="vertical"
                                         android:layout_gravity="center"
@@ -97,9 +65,8 @@
 
                     <RelativeLayout android:layout_width="match_parent"
                                     android:orientation="vertical"
-                                    android:layout_weight="1"
                                     android:layout_marginTop="8dp"
-                                    android:layout_height="0dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_gravity="center"
                                     android:gravity="center"
                                     android:background="@color/white"
