--- a/res/layout/item_message.xml
+++ b/res/layout/item_message.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:padding="3dp"
-              android:background="@drawable/btn_white_shape"
-              android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:padding="3dp"
+                android:background="@drawable/btn_white_shape"
+                android:layout_height="wrap_content">
 
     <com.lbins.meetlove.widget.RoundImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_margin="3dp"
             android:src="@drawable/default_cover2"
             android:id="@+id/item_cover"/>
     <TextView android:layout_width="wrap_content"
               android:text="83年 163cm 北京"
-              android:textColor="@color/textColor"
-              android:textSize="15sp"
+              style="@style/MMFontTitleInList"
               android:id="@+id/nickname"
               android:layout_toRightOf="@+id/item_cover"
               android:layout_marginTop="8dp"
