--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -237,6 +237,11 @@
         <item name="android:windowExitAnimation">@anim/push_bottom_out</item>
     </style>
 
-
+    <style name="customProgressBar" parent="@android:style/Widget.ProgressBar.Small">
+        <item name="android:indeterminateDrawable">@drawable/custom_progress_bar</item>
+        <item name="android:layout_width">21dip</item>
+        <item name="android:layout_height">21dip</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
 
 </resources>
