--- a/res/layout/pay_emp_cx_activity.xml
+++ b/res/layout/pay_emp_cx_activity.xml
@@ -17,7 +17,8 @@
                       android:orientation="vertical"
                       android:layout_height="match_parent">
 
-            <ImageView android:layout_width="wrap_content"
+            <ImageView android:layout_width="match_parent"
+                       android:scaleType="fitXY"
                        android:src="@drawable/bigpic_verify_v"
                        android:layout_height="wrap_content"/>
 
